@@ -8,6 +8,7 @@
 
 package sirius.pasta.tagliatelle;
 
+import com.google.common.collect.Streams;
 import parsii.tokenizer.ParseError;
 import parsii.tokenizer.Position;
 import sirius.kernel.Sirius;
@@ -124,15 +125,29 @@ public class Tagliatelle {
     }
 
     private List<TemplateExtension> loadExtensions(String target) {
-        return Sirius.getClasspath()
-                     .find(Pattern.compile("(default/|customizations/[^/]+/)?extensions/"
-                                           + Pattern.quote(target)
-                                           + "/.*.pasta"))
-                     .map(m -> m.group(0))
-                     .map(this::resolveToTemplateExtension)
-                     .filter(Objects::nonNull)
-                     .sorted()
-                     .collect(Collectors.toList());
+        List<TemplateExtension> extensionsForTarget = Sirius.getClasspath()
+                                                            .find(Pattern.compile("(customizations/[^/]+/)?extensions/"
+                                                                                  + Pattern.quote(target)
+                                                                                  + "/.*.pasta"))
+                                                            .map(m -> m.group(0))
+                                                            .map(this::resolveToTemplateExtension)
+                                                            .filter(Objects::nonNull)
+                                                            .toList();
+
+        // Also check for extensions provided as default - which are only loaded, if no overwrites (same path without
+        // /default/ in front) exists...
+        return Streams.concat(extensionsForTarget.stream(),
+                              Sirius.getClasspath()
+                                    .find(Pattern.compile("default/extensions/" + Pattern.quote(target) + "/.*.pasta"))
+                                    .map(m -> m.group(0))
+                                    .filter(path -> extensionsForTarget.stream()
+                                                                       .noneMatch(extension -> Strings.areEqual(path.substring(
+                                                                                                                        "default".length()),
+                                                                                                                extension.getTemplate()
+                                                                                                                         .getResource()
+                                                                                                                         .getPath())))
+                                    .map(this::resolveToTemplateExtension)
+                                    .filter(Objects::nonNull)).sorted().toList();
     }
 
     private TemplateExtension resolveToTemplateExtension(String path) {
